added some dev dependencies

--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "js-watch": "npm run js-build -- --watch",
     "start": "npm-run-all --parallel css-watch js-watch"
   },
-  "version": "0.0.4"
+  "version": "0.0.4",
+  "dependencies": {
+    "imagemin-webp": "^6.0.0"
+  }
 }
