--- a/package.json
+++ b/package.json
@@ -37,17 +37,19 @@
   "devDependencies": {
     "@babel/core": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "concurrently": "^5.3.0",
-    "imagemin-webp": "^6.0.0",
-    "parcel-bundler": "^1.12.4",
     "autoprefixer": "^9.7.6",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-ie": "^6.7.0",
     "bulma": "^0.9.0",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.14.0",
+    "eslint-plugin-react": "^7.21.5",
     "imagemin-cli": "^6.0.0",
+    "imagemin-webp": "^6.0.0",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
     "postcss-cli": "^7.1.0"
   },
   "homepage": "https://github.com/jgthms/bulma-start#readme",
@@ -73,6 +75,7 @@
     "react": "^17.0.1",
     "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.1",
-    "react-router": "^5.2.0"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   }
 }
